--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="col-md-12">
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-6"><div class="fb-like" data-href="http://www.ilmeteorandom.it" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div></div>
-                        <div class="col-md-6 col-sm-6 col-xs-6"><a href="https://twitter.com/share" data-url="http://ilmeteorandom.it" class="twitter-share-button" data-lang="it" data-related="samskeyti79,auloedus">Tweet</a>
+                        <div class="col-md-6 col-sm-6 col-xs-6"><a href="https://twitter.com/share" data-url="http://www.ilmeteorandom.it" class="twitter-share-button" data-lang="it" data-related="samskeyti79,auloedus">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></div>
                     </div>
                     <small class="text-muted">weather icons by <a target="_blank" href="http://erikflowers.github.io/weather-icons/">erikflowers</a></small>
